{{$NEXT}}

1.19   2015-05-31

- If you compared a DateTime object to an undef value, you might have received
  a warning pointing to code inside DateTime.pm, instead of in your own
  code. Fixed by Jason McIntosh. GH #7.

- The 30future-tz.t could fail if run at certain very specific times. This
  should now be much less likely, unless a time zone being tested implements a
  DST change at noon (which would even more insane than DST already is by a
  huge factor). Reported by Karen Etheridge and diagnosed by Slaven Rezic. RT
  #102925.


1.18   2015-01-05

- There will be a new leap second on June 30, 2015.


1.17   2015-01-04

- No code changes from the 1.16 release.


1.16   2015-01-04 (TRIAL RELEASE)

- Test fix for systems where IVs are 4 bytes long.


1.15   2015-01-03 (TRIAL RELEASE)

- Trying this again ... Experimental fix for adding very large numbers of
  days. Previously, trying to add more than around 2^28 days could cause
  errors if the result ended up in a leap year. This is being released as a
  trial release because I'm not sure how this change will behave on a 32-bit
  Perl. Reported by KMX. RT #97046.


1.14   2015-01-03

- Accidentally released 1.13 as a non-TRIAL release. Releasing 1.13 minus the
  integer change so there's a known-safe stable release on CPAN for people to
  install.


1.13   2015-01-03

* This release was deleted from CPAN.

- Experimental fix for adding very large numbers of days. Previously, trying
  to add more than around 2^28 days could cause errors if the result ended up
  in a leap year. This is being released as a trial release because I'm not
  sure how this change will behave on a 32-bit Perl. Reported by KMX. RT
  #97046.

- Various small doc chances to address RT #96958, #98733, and #101262.


1.12   2014-08-31

- The last release had the wrong repo info in the metadata.


1.11   2014-08-31

- The latest historical changes in DateTime::TimeZone 1.74 caused some tests
  to fail. Reported by Slaven Rezic. RT #98483.
