@@ -1156,6 +1156,7 @@ use DateTime;
         [ 2005, 12, 31 ],
         [ 2008, 12, 31 ],
         [ 2012, 6,  30 ],
+        [ 2015, 6,  30 ],
         ) {
         my $formatted = join '-', map { sprintf( '%02d', $_ ) } @{$date};
 
